--- a/package.json
+++ b/package.json
@@ -22,10 +22,14 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
+    "@angular-builders/jest": "^13.0.1",
     "@angular-devkit/build-angular": "~13.0.4",
     "@angular/cli": "~13.0.4",
     "@angular/compiler-cli": "~13.0.0",
+    "@types/jest": "^27.0.3",
     "@types/node": "^12.11.1",
+    "jest": "^27.4.3",
+    "jest-preset-angular": "^11.0.1",
     "typescript": "~4.4.3"
   }
 }
