--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
     "moduleResolution": "node",
     "importHelpers": true,
     "target": "es2017",
+    "types": ["jest"],
     "module": "es2020",
     "lib": [
       "es2020",
